# rusty_dev_tool

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: release-please-config.yaml
.github/workflows/: clippy.yaml  release-please.yaml  release.yaml  tests.yaml
.rusty_dev_tool/: config.toml
docs/: local-routing-setup.md
examples/configs/: home_config.toml  project_config.toml
examples/project setups/Vue - rust + node + postgres + redis/: README.md  compose.yaml
examples/project setups/Vue: rust + node + postgres + redis/: compose.yaml
examples/project setups/pimcore 10 (symfony 5) - php + node + maria + gotenberg + mutagen/: README.md  compose.yaml
examples/project setups/pimcore 10 (symfony 5): php + node + maria + gotenberg + mutagen/: compose.yaml
examples/project setups/pimcore 11 (symfony 6) - php + node + maria/: compose.yaml
examples/project setups/pimcore 11 (symfony 6): php + node + maria/: README.md  compose.yaml
src/: clap_args.rs  env_functions.rs  main.rs
src/commands/: command.rs  custom_command.rs  mod.rs  registry.rs
src/commands/execs/: build.rs  chown.rs  command_list.rs  db.rs  generate_completions.rs  mod.rs  self_update.rs  shell.rs  start.rs  stop.rs
src/env/: config.rs  home_config.rs  init.rs  local_config.rs  mod.rs  resolve.rs  setup.rs  traits.rs
src/env/compose/: compose_enum.rs  enum.rs  mod.rs
src/error/: command.rs  command_error.rs  config.rs  config_error.rs  environment.rs  environment_error.rs  file_system.rs  file_system_error.rs  mod.rs  update.rs  update_error.rs
(+11 files in other folders)
