[package]
name = "rusty_dev_tool"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
lazy_static = "1.4.0"
clap_complete = "4.5.2"
colored = "2.1.0"
